--- a/index.html
+++ b/index.html
@@ -1,30 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HAZARD — Coming Soon</title>
-    <link rel="stylesheet" href="styles.css">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>HAZARD – Coming Soon</title>
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+        background: black;
+        color: #d7b375; /* Mystic gold */
+        font-family: "Georgia", serif;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        min-height: 100vh;
+        text-align: center;
+        padding: 20px;
+        background: radial-gradient(circle at center, #1a0000 0%, #000000 80%);
+    }
+
+    h1 {
+        font-size: 4rem;
+        letter-spacing: 4px;
+        margin-bottom: 25px;
+    }
+
+    p {
+        font-size: 1.3rem;
+        opacity: 0.92;
+        max-width: 700px;
+        line-height: 1.6;
+        margin: 18px 0;
+    }
+
+    .skull {
+        width: 160px;
+        margin-bottom: 25px;
+        opacity: 0.95;
+    }
+
+    .smoke {
+        animation: floatSmoke 3s ease-in-out infinite alternate;
+        opacity: 0.8;
+    }
+
+    @keyframes floatSmoke {
+        0% { transform: translateY(0px); opacity: 0.6; }
+        100% { transform: translateY(-10px); opacity: 1; }
+    }
+</style>
 </head>
 <body>
 
-<div class="overlay"></div>
+<img class="skull" src="skull.png" alt="HAZARD Skull" />
 
-<div class="container">
-    <img src="images/hazard_skull.png" class="skull" alt="Hazard Skull">
-    
-    <h1 class="title">HAZARD</h1>
-    <p class="subtitle">Powered by the Dark Power on Solana🖤💀
+<h1>HAZARD</h1>
 
-HAZARD brings back danger, mystery and adrenaline to crypto. No promises. No safety. Just the game. Welcome to the endgame.
+<p class="smoke">Powered by the Dark Power on Solana 💀</p>
 
+<p>
+HAZARD brings back danger, mystery and adrenaline to crypto.  
+No promises. No safety. Just the game.
+</p>
+
+<p>
+Welcome to the endgame.
+</p>
+
+<p>
+Enter only if you trust your own decisions.
+</p>
+
+<p>
 🖤 100% community
+</p>
 
-Enter only if you trust your own decisions.</p>
-
-    <p class="coming-soon">COMING SOON</p>
-</div>
-
-<script src="script.js"></script>
 </body>
 </html>
