--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <h1>HAZARD</h1>
 
-<p class="smoke">Powered by the Dark Power on Solana 💀</p>
+<p class="smoke">Powered by the Dark Power on Solana 🖤💀</p>
 
 <p>
 HAZARD brings back danger, mystery and adrenaline to crypto.  
