--- a/index.html
+++ b/index.html
@@ -1,81 +1,36 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>HAZARD – Coming Soon</title>
-<style>
-    body {
-        margin: 0;
-        padding: 0;
-        background: black;
-        color: #d7b375; /* Mystic gold */
-        font-family: "Georgia", serif;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        min-height: 100vh;
-        text-align: center;
-        padding: 20px;
-        background: radial-gradient(circle at center, #1a0000 0%, #000000 80%);
-    }
-
-    h1 {
-        font-size: 4rem;
-        letter-spacing: 4px;
-        margin-bottom: 25px;
-    }
-
-    p {
-        font-size: 1.3rem;
-        opacity: 0.92;
-        max-width: 700px;
-        line-height: 1.6;
-        margin: 18px 0;
-    }
-
-    .skull {
-        width: 160px;
-        margin-bottom: 25px;
-        opacity: 0.95;
-    }
-
-    .smoke {
-        animation: floatSmoke 3s ease-in-out infinite alternate;
-        opacity: 0.8;
-    }
-
-    @keyframes floatSmoke {
-        0% { transform: translateY(0px); opacity: 0.6; }
-        100% { transform: translateY(-10px); opacity: 1; }
-    }
-</style>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>HAZARD — Energy Pulse (Coming Soon)</title>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="bg-layer"></div>
 
-<img class="skull" src="skull.png" alt="HAZARD Skull" />
+  <header class="wrap">
+    <div class="skull-wrap">
+      <img src="images/skull_a.png" alt="HAZARD Skull" class="skull" />
+      <div class="skull-glow" aria-hidden="true"></div>
+    </div>
 
-<h1>HAZARD</h1>
+    <h1 class="title">HAZARD</h1>
+    <p class="slogan">Powered by the Dark Power on Solana 🖤💀</p>
 
-<p class="smoke">Powered by the Dark Power on Solana 🖤💀</p>
+    <div class="content">
+      <p class="lead">HAZARD brings back danger, mystery and adrenaline to crypto.<br>No promises. No safety. Just the game.</p>
+      <p class="lead highlight">Welcome to the endgame.</p>
+      <p class="lead">Enter only if you trust your own decisions.</p>
+      <p class="community">🖤 <strong>100% community</strong></p>
+    </div>
 
-<p>
-HAZARD brings back danger, mystery and adrenaline to crypto.  
-No promises. No safety. Just the game.
-</p>
+    <div class="cta-row">
+      <a class="btn" href="#" target="_blank" rel="noopener">Twitter</a>
+      <a class="btn" href="#" target="_blank" rel="noopener">Telegram</a>
+    </div>
+  </header>
 
-<p>
-Welcome to the endgame.
-</p>
-
-<p>
-Enter only if you trust your own decisions.
-</p>
-
-<p>
-🖤 100% community
-</p>
-
+<script src="script.js"></script>
 </body>
 </html>
