--- a/index.html
+++ b/index.html
@@ -16,18 +16,17 @@
     </div>
 
     <h1 class="title">HAZARD</h1>
-    <p class="slogan">Powered by the Dark Power on Solana 🖤💀</p>
+    <p class="slogan">Powered by the Dark Power on Solana 💀</p>
 
     <div class="content">
       <p class="lead">HAZARD brings back danger, mystery and adrenaline to crypto.<br>No promises. No safety. Just the game.</p>
-      <p class="lead highlight">Welcome to the endgame.</p>
+      <p class="lead highlight">Coming soon</p>
       <p class="lead">Enter only if you trust your own decisions.</p>
-      <p class="community">🖤 <strong>100% community</strong></p>
+      <p class="community">🖤 <strong>100% Community</strong></p>
     </div>
 
     <div class="cta-row">
-      <a class="btn" href="#" target="_blank" rel="noopener">Twitter</a>
-      <a class="btn" href="#" target="_blank" rel="noopener">Telegram</a>
+      <
     </div>
   </header>
 
