--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <p class="lead">HAZARD brings back danger, mystery and adrenaline to crypto.<br>No promises. No safety. Just the game.</p>
       <p class="lead highlight">Coming soon</p>
       <p class="lead">Enter only if you trust your own decisions.</p>
-      <p class="community">🖤 <strong>100% Community</strong></p>
+      <p class="community">🖤 <strong>100% Community/strong></p>
     </div>
 
     <div class="cta-row">
