--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Hero mit Banner-Hintergrund und Logo -->
     <section class="hero">
         <div class="runes"></div>
-        <img src="images/logo.JPEG" alt="HAZARD Skull" class="logo-big" onerror="console.log('Logo nicht gefunden'); this.style.display='none';">
+        <img src="images/logo.JPEG" alt="HAZARD Skull" class="logo-big" onerror="console.log('Logo nicht gefunden'); this.src='https://via.placeholder.com/300x300/000000/D4AF37?text=HAZARD';">
         <h1>HAZARD</h1>
         <div class="subtitle">POWERED BY THE DARK POWER ON SOLANA</div>
     </section>
@@ -21,7 +21,7 @@
     <!-- Lore mit Skull-Bild -->
     <section class="section">
         <h2>THE DARK POWER AWAKENS</h2>
-        <img src="images/skull.JPEG" alt="HAZARD Skull" class="skull-float" onerror="console.log('Skull nicht gefunden'); this.style.display='none';">
+        <img src="images/skull.JPEG" alt="HAZARD Skull" class="skull-float" onerror="console.log('Skull nicht gefunden'); this.src='https://via.placeholder.com/220x220/000000/D4AF37?text=💀'; this.style.borderRadius='50%';">
         <p class="lore-text">HAZARD brings danger, mystery, and adrenaline back to the crypto world. Keine Roadmaps. Keine Versprechen. Nur purer, dunkler Thrill auf Solana. Wenn du das Risiko liebst – willkommen im Schatten.</p>
     </section>
 
