--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="HAZARD – Dark Power Memecoin on Solana. No roadmap. No promises. Only danger.">
+    <title>HAZARD • Dark Power on Solana</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@900&family=Creepster&family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <!-- Hero mit Banner-Hintergrund und Logo -->
+    <section class="hero">
+        <div class="runes"></div>
+        <img src="images/logo.JPEG" alt="HAZARD Skull" class="logo-big" onerror="console.log('Logo nicht gefunden'); this.src='https://via.placeholder.com/300x300/000000/D4AF37?text=HAZARD';">
+        <h1>HAZARD</h1>
+        <div class="subtitle">POWERED BY THE DARK POWER ON SOLANA</div>
+    </section>
 
+    <!-- Lore mit Skull-Bild -->
+    <section class="section">
+        <h2>THE DARK POWER AWAKENS</h2>
+        <img src="images/skull.JPEG" alt="HAZARD Skull" class="skull-float" onerror="console.log('Skull nicht gefunden'); this.src='https://via.placeholder.com/220x220/000000/D4AF37?text=💀'; this.style.borderRadius='50%';">
+        <p class="lore-text">HAZARD brings danger, mystery, and adrenaline back to the crypto world. Keine Roadmaps. Keine Versprechen. Nur purer, dunkler Thrill auf Solana. Wenn du das Risiko liebst – willkommen im Schatten.</p>
+    </section>
+
+    <!-- Wheel -->
+    <section class="section wheel-bg">
+        <h2>THE HAZARD WHEEL</h2>
+        <p class="wheel-subtitle">Dreh das Rad der Unterwelt – wenn du dich traust…</p>
+        <div class="wheel-container">
+            <img src="https://i.ibb.co/Hnd7VwK/hazard-wheel.png" alt="Wheel" id="wheel" onerror="console.log('Wheel fallback'); this.src='data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNDIwIiBoZWlnaHQ9IjQyMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48Y2lyY2xlIGN4PSIyMTAiIGN5PSIyMTAiIHI9IjIwMCIgZmlsbD0iIzAwMCIgc3Ryb2tlPSIjRD RB RjM3IiBzdHJva2Utd2lkdGg9IjQiLz48L3N2Zz4=';">
+            <button id="spin-btn">SPIN</button>
+        </div>
+        <div id="wheel-result">Klick SPIN …</div>
+    </section>
+
+    <!-- CA -->
+    <section class="section ca-section">
+        <h2>CONTRACT ADDRESS</h2>
+        <div id="ca-address">DEINE_ECHTE_CA_HIER_EINFÜGEN</div>
+        <button id="copy-btn">COPY CA</button>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>© 2025 HAZARD – Powered by the Dark Power on Solana 🖤💀</p>
+        <div class="socials">
+            <a href="https://x.com/HAZARD_Solana" target="_blank">X / Twitter</a> |
+            <a href="https://t.me/hazardcoinofficial" target="_blank">Telegram</a> |
+            <a href="https://dexscreener.com/solana/DEINE_CA" target="_blank">Dexscreener</a>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
