--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Hero mit Banner-Hintergrund und Logo -->
+    <!-- Hero mit Banner-Hintergrund und Logo-Foto -->
     <section class="hero">
         <div class="runes"></div>
-        <img src="images/logo.JPEG" alt="HAZARD Skull" class="logo-big" onerror="console.log('Logo nicht gefunden'); this.src='https://via.placeholder.com/300x300/000000/D4AF37?text=HAZARD';">
+        <img src="images/logo.JPEG" alt="HAZARD Skull" class="logo-big" onerror="this.src='https://via.placeholder.com/300x300/000000/D4AF37?text=HAZARD'; console.log('Logo Fallback geladen');">
         <h1>HAZARD</h1>
         <div class="subtitle">POWERED BY THE DARK POWER ON SOLANA</div>
     </section>
 
-    <!-- Lore mit Skull-Bild -->
+    <!-- Lore mit Skull-Foto -->
     <section class="section">
         <h2>THE DARK POWER AWAKENS</h2>
-        <img src="images/skull.JPEG" alt="HAZARD Skull" class="skull-float" onerror="console.log('Skull nicht gefunden'); this.src='https://via.placeholder.com/220x220/000000/D4AF37?text=💀'; this.style.borderRadius='50%';">
+        <img src="images/skull.JPEG" alt="HAZARD Skull" class="skull-float" onerror="this.src='https://via.placeholder.com/220x220/000000/D4AF37?text=💀'; this.style.borderRadius='50%'; console.log('Skull Fallback geladen');">
         <p class="lore-text">HAZARD brings danger, mystery, and adrenaline back to the crypto world. Keine Roadmaps. Keine Versprechen. Nur purer, dunkler Thrill auf Solana. Wenn du das Risiko liebst – willkommen im Schatten.</p>
     </section>
 
@@ -30,7 +30,7 @@
         <h2>THE HAZARD WHEEL</h2>
         <p class="wheel-subtitle">Dreh das Rad der Unterwelt – wenn du dich traust…</p>
         <div class="wheel-container">
-            <img src="https://i.ibb.co/Hnd7VwK/hazard-wheel.png" alt="Wheel" id="wheel" onerror="console.log('Wheel fallback'); this.src='data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNDIwIiBoZWlnaHQ9IjQyMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48Y2lyY2xlIGN4PSIyMTAiIGN5PSIyMTAiIHI9IjIwMCIgZmlsbD0iIzAwMCIgc3Ryb2tlPSIjRD RB RjM3IiBzdHJva2Utd2lkdGg9IjQiLz48L3N2Zz4=';">
+            <img src="https://i.ibb.co/Hnd7VwK/hazard-wheel.png" alt="Wheel" id="wheel" onerror="this.src='data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNDIwIiBoZWlnaHQ9IjQyMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48Y2lyY2xlIGN4PSIyMTAiIGN5PSIyMTAiIHI9IjIwMCIgZmlsbD0iIzAwMCIgc3Ryb2tlPSIjRD RB RjM3IiBzdHJva2Utd2lkdGg9IjQiLz48L3N2Zz4='; console.log('Wheel Fallback geladen');">
             <button id="spin-btn">SPIN</button>
         </div>
         <div id="wheel-result">Klick SPIN …</div>
