--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         </div>
     </footer>
 
-    <!-- Script (alles inline) -->
+    <!-- Script -->
     <script>
         // Copy CA
         document.getElementById('copy-btn').onclick = () => {
