--- a/index.html
+++ b/index.html
@@ -1,187 +1,36 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>HAZARD – Powered by the Dark Power on Solana</title>
-
-<style>
-/* ------------------------------------------------ */
-/* GLOBAL */
-/* ------------------------------------------------ */
-body {
-    margin: 0;
-    font-family: "Georgia", serif;
-    background: black;
-    color: #d7b375;
-    overflow-x: hidden;
-}
-
-section {
-    padding: 120px 20px;
-    text-align: center;
-}
-
-/* ------------------------------------------------ */
-/* BACKGROUND SMOKE */
-/* ------------------------------------------------ */
-.smoke-bg {
-    position: fixed;
-    top: 0; left: 0;
-    width: 100%;
-    height: 100%;
-    background: url("smoke.png") center/cover no-repeat;
-    opacity: 0.25;
-    animation: drift 20s infinite alternate ease-in-out;
-    z-index: -1;
-}
-
-@keyframes drift {
-    0% { transform: translateY(0px); opacity: 0.2; }
-    100% { transform: translateY(-60px); opacity: 0.35; }
-}
-
-/* ------------------------------------------------ */
-/* GLOW TEXT */
-/* ------------------------------------------------ */
-.glow {
-    text-shadow: 0 0 15px #d7b375;
-}
-
-/* ------------------------------------------------ */
-/* HERO */
-/* ------------------------------------------------ */
-#hero {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-#hero img {
-    width: 260px;
-    margin: 0 auto 20px;
-    filter: drop-shadow(0 0 12px #d7b375aa);
-}
-
-h1 {
-    font-size: 4rem;
-    letter-spacing: 4px;
-    margin: 0;
-}
-
-.subtitle {
-    font-size: 1.4rem;
-    opacity: 0.9;
-    margin-top: 10px;
-}
-
-button {
-    margin-top: 40px;
-    font-size: 1.2rem;
-    padding: 15px 40px;
-    border: 2px solid #d7b375;
-    background: transparent;
-    color: #d7b375;
-    cursor: pointer;
-    transition: 0.3s;
-}
-
-button:hover {
-    background: #d7b375;
-    color: black;
-}
-
-/* ------------------------------------------------ */
-/* CARDS */
-/* ------------------------------------------------ */
-.card-container {
-    display: flex;
-    justify-content: center;
-    gap: 25px;
-    flex-wrap: wrap;
-}
-
-.card {
-    border: 2px solid #d7b375;
-    padding: 20px 30px;
-    width: 220px;
-    font-size: 1.3rem;
-    transition: 0.3s;
-}
-
-.card:hover {
-    transform: translateY(-6px);
-    box-shadow: 0 0 20px #d7b37555;
-}
-
-/* ------------------------------------------------ */
-/* FOOTER */
-/* ------------------------------------------------ */
-footer {
-    text-align: center;
-    padding: 40px;
-    font-size: 1rem;
-    opacity: 0.7;
-}
-</style>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>HAZARD — Energy Pulse (Coming Soon)</title>
+<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
+  <div class="bg-layer"></div>
 
-<div class="smoke-bg"></div>
-
-<!-- HERO -->
-<section id="hero">
-    <img src="skull.png" alt="HAZARD Skull">
-    <h1 class="glow">HAZARD</h1>
-    <p class="subtitle">Powered by the Dark Power on Solana 🖤💀</p>
-    <button onclick="document.querySelector('#about').scrollIntoView({behavior:'smooth'})">
-        ENTER THE DARK
-    </button>
-</section>
-
-<!-- ABOUT -->
-<section id="about">
-    <h2 class="glow">What is HAZARD?</h2>
-    <p style="max-width:800px; margin:auto; font-size:1.3rem;">
-        HAZARD brings danger, mystery and adrenaline back to crypto.<br><br>
-        No promises. No roadmap.<br>
-        Only instinct, risk — and your own decisions.<br><br>
-        💀 Enter only if you trust your judgment.
-    </p>
-</section>
-
-<!-- TOKENOMICS -->
-<section id="tokenomics">
-    <h2 class="glow">Tokenomics</h2>
-
-    <div class="card-container">
-        <div class="card">Total Supply<br><b>???</b></div>
-        <div class="card">LP<br><b>Burned</b></div>
-        <div class="card">Tax<br><b>0%</b></div>
-        <div class="card">Community<br><b>100%</b></div>
+  <header class="wrap">
+    <div class="skull-wrap">
+      <img src="images/skull_a.png" alt="HAZARD Skull" class="skull" />
+      <div class="skull-glow" aria-hidden="true"></div>
     </div>
-</section>
 
-<!-- ROADMAP -->
-<section id="roadmap">
-    <h2 class="glow">The Ritual</h2>
-    <p style="max-width:700px; margin:auto; font-size:1.2rem;">
-        <b>Phase I – The Awakening</b><br>
-        Website, branding, community ignition.<br><br>
+    <h1 class="title">HAZARD</h1>
+    <p class="slogan">Powered by the Dark Power on Solana 🖤💀</p>
 
-        <b>Phase II – The Spread</b><br>
-        Listings, raids, expansion.<br><br>
+    <div class="content">
+      <p class="lead">HAZARD brings back danger, mystery and adrenaline to crypto.<br>No promises. No safety. Just the game.</p>
+      <p class="lead highlight">Welcome to the endgame.</p>
+      <p class="lead">Enter only if you trust your own decisions.</p>
+      <p class="community">🖤 <strong>100% community</strong></p>
+    </div>
 
-        <b>Phase III – The Dominion</b><br>
-        The full HAZARD ecosystem.
-    </p>
-</section>
+    <div class="cta-row">
+      <a class="btn" href="#" target="_blank" rel="noopener">Twitter</a>
+      <a class="btn" href="#" target="_blank" rel="noopener">Telegram</a>
+    </div>
+  </header>
 
-<footer>
-    © 2025 HAZARD — Powered by the Dark Power on Solana
-</footer>
-
+<script src="script.js"></script>
 </body>
 </html>
