--- a/index.html
+++ b/index.html
@@ -4,129 +4,52 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>HAZARD – Coming Soon</title>
-
 <style>
-/* ---------- BACKGROUND ---------- */
-body {
-    margin: 0;
-    padding: 0;
-    background: black;
-    color: #d7b375; /* Mystic gold */
-    font-family: "Georgia", serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    overflow: hidden;
-    text-align: center;
-}
-
-/* ---------- ANIMATED NEBEL ---------- */
-#fog {
-    position: fixed;
-    top: -50px;
-    left: 0;
-    width: 200%;
-    height: 200%;
-    background: url('https://i.imgur.com/8s7EJ5L.png') repeat;
-    opacity: 0.15;
-    animation: fogMove 60s linear infinite;
-    z-index: -1;
-}
-
-@keyframes fogMove {
-    0% { transform: translateX(0px); }
-    100% { transform: translateX(-1000px); }
-}
-
-/* ---------- SKULL ---------- */
-.skull {
-    width: 170px;
-    opacity: 0.95;
-    animation: skullFloat 4s ease-in-out infinite alternate;
-}
-
-@keyframes skullFloat {
-    0% { transform: translateY(0px); opacity: 0.85; }
-    100% { transform: translateY(-12px); opacity: 1; }
-}
-
-/* ---------- GLOWING TEXT ---------- */
-h1 {
-    font-size: 4.3rem;
-    letter-spacing: 6px;
-    margin: 20px 0 10px 0;
-    text-shadow: 
-        0 0 10px #d7b375,
-        0 0 20px #a07a40,
-        0 0 40px #d7b37588;
-    animation: glowPulse 3s ease-in-out infinite;
-}
-
-@keyframes glowPulse {
-    0% { text-shadow: 0 0 10px #d7b375; }
-    50% { text-shadow: 0 0 25px #eacfa2; }
-    100% { text-shadow: 0 0 10px #d7b375; }
-}
-
-/* ---------- SLOGAN SMOKE TEXT ---------- */
-.smoke {
-    font-size: 1.5rem;
-    margin-bottom: 25px;
-    text-shadow: 0 0 10px #664422;
-    animation: smokeGlow 5s ease-in-out infinite alternate;
-}
-
-@keyframes smokeGlow {
-    0% { opacity: 0.7; text-shadow: 0 0 5px #332211; }
-    100% { opacity: 1; text-shadow: 0 0 15px #bb9955; }
-}
-
-/* ---------- CONTENT TEXT ---------- */
-p {
-    font-size: 1.3rem;
-    max-width: 750px;
-    line-height: 1.65;
-    margin: 18px 0;
-    opacity: 0.9;
-    animation: fadeIn 3s ease forwards;
-}
-
-@keyframes fadeIn {
-    from { opacity: 0; }
-    to { opacity: 0.92; }
-}
-
+    body {
+        margin: 0;
+        padding: 0;
+        background: black;
+        color: #d7b375; /* Mystic gold */
+        font-family: "Georgia", serif;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        text-align: center;
+        background: radial-gradient(circle at center, #1a0000 0%, #000000 80%);
+    }
+    h1 {
+        font-size: 4rem;
+        letter-spacing: 4px;
+        margin-bottom: 20px;
+    }
+    p {
+        font-size: 1.4rem;
+        opacity: 0.9;
+    }
+    .skull {
+        width: 160px;
+        margin-bottom: 20px;
+        opacity: 0.95;
+    }
+    .smoke {
+        animation: floatSmoke 3s ease-in-out infinite alternate;
+        opacity: 0.7;
+    }
+    @keyframes floatSmoke {
+        0% { transform: translateY(0px); opacity: 0.6; }
+        100% { transform: translateY(-10px); opacity: 1; }
+    }
 </style>
 </head>
-
 <body>
-
-<div id="fog"></div>
 
 <img class="skull" src="skull.png" alt="HAZARD Skull" />
 
 <h1>HAZARD</h1>
-
 <p class="smoke">Powered by the Dark Power on Solana 🖤💀</p>
-
-<p>
-HAZARD brings back danger, mystery and adrenaline to crypto.<br>
-No promises. No safety. Just the game.
-</p>
-
-<p>
-HAZARD – Coming Soon
-</p>
-
-<p>
-Enter only if you trust your own decisions.
-</p>
-
-<p>
-🖤 100% community
-</p>
+<p>Something dark is coming…</p>
 
 </body>
 </html>
