--- a/index.html
+++ b/index.html
@@ -1,55 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>HAZARD – Coming Soon</title>
-<style>
-    body {
-        margin: 0;
-        padding: 0;
-        background: black;
-        color: #d7b375; /* Mystic gold */
-        font-family: "Georgia", serif;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        text-align: center;
-        background: radial-gradient(circle at center, #1a0000 0%, #000000 80%);
-    }
-    h1 {
-        font-size: 4rem;
-        letter-spacing: 4px;
-        margin-bottom: 20px;
-    }
-    p {
-        font-size: 1.4rem;
-        opacity: 0.9;
-    }
-    .skull {
-        width: 160px;
-        margin-bottom: 20px;
-        opacity: 0.95;
-    }
-    .smoke {
-        animation: floatSmoke 3s ease-in-out infinite alternate;
-        opacity: 0.7;
-    }
-    @keyframes floatSmoke {
-        0% { transform: translateY(0px); opacity: 0.6; }
-        100% { transform: translateY(-10px); opacity: 1; }
-    }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HAZARD — Coming Soon</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<img class="skull" src="skull.png" alt="HAZARD Skull" />
+<div class="overlay"></div>
 
-<h1>HAZARD</h1>
-<p class="smoke">Powered by the Dark Power on Solana 🖤💀</p>
-<p>Something dark is coming…</p>
+<div class="container">
+    <img src="images/hazard_skull.png" class="skull" alt="Hazard Skull">
+    
+    <h1 class="title">HAZARD</h1>
+    <p class="subtitle">Powered by the Dark Power on Solana 🖤💀</p>
 
+    <p class="coming-soon">COMING SOON</p>
+</div>
+
+<script src="script.js"></script>
 </body>
 </html>
