--- a/index.html
+++ b/index.html
@@ -15,28 +15,37 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        height: 100vh;
+        min-height: 100vh;
         text-align: center;
+        padding: 20px;
         background: radial-gradient(circle at center, #1a0000 0%, #000000 80%);
     }
+
     h1 {
         font-size: 4rem;
         letter-spacing: 4px;
-        margin-bottom: 20px;
+        margin-bottom: 25px;
     }
+
     p {
-        font-size: 1.4rem;
-        opacity: 0.9;
+        font-size: 1.3rem;
+        opacity: 0.92;
+        max-width: 700px;
+        line-height: 1.6;
+        margin: 18px 0;
     }
+
     .skull {
         width: 160px;
-        margin-bottom: 20px;
+        margin-bottom: 25px;
         opacity: 0.95;
     }
+
     .smoke {
         animation: floatSmoke 3s ease-in-out infinite alternate;
-        opacity: 0.7;
+        opacity: 0.8;
     }
+
     @keyframes floatSmoke {
         0% { transform: translateY(0px); opacity: 0.6; }
         100% { transform: translateY(-10px); opacity: 1; }
@@ -48,8 +57,25 @@
 <img class="skull" src="skull.png" alt="HAZARD Skull" />
 
 <h1>HAZARD</h1>
+
 <p class="smoke">Powered by the Dark Power on Solana 🖤💀</p>
-<p>Something dark is coming…</p>
+
+<p>
+HAZARD brings back danger, mystery and adrenaline to crypto.  
+No promises. No safety. Just the game.
+</p>
+
+<p>
+Welcome to the endgame.
+</p>
+
+<p>
+Enter only if you trust your own decisions.
+</p>
+
+<p>
+🖤 100% community
+</p>
 
 </body>
 </html>
