--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <header class="wrap">
     <div class="skull-wrap">
-      <img src="images/skull_a.png" alt="HAZARD Skull" class="skull" />
+      <img src="images/skull.png" alt="HAZARD Skull" class="skull" />
       <div class="skull-glow" aria-hidden="true"></div>
     </div>
 
