--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
     </div>
   </header>
 
+  <!-- Footer -->
+    <footer class="footer">
+        <p>&copy; 2025 HAZARD. Powered by the Dark Power on Solana 🖤💀</p>
+        <div class="social-links">
+            <a href="https://x.com/HAZARD_Solana" target="_blank">X</a> |
+            <a href="https://t.me/hazardcoinofficial" target="_blank">Telegram</a>
+        </div>
+    </footer>
+  
 <script src="script.js"></script>
 </body>
 </html>
