--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="content">
       <p class="lead">HAZARD brings back danger, mystery and adrenaline to crypto.<br>No promises. No safety. Just the game.</p>
-      <p class="lead highlight">Coming soon</p>
+      <p class="lead highlight">COMING SOON</p>
       <p class="lead">Enter only if you trust your own decisions.</p>
       <p class="community">🖤 <strong>100% community</strong></p>
     </div>
