--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </div>
 
     <div class="cta-row">
-      <a class="btn" href="#" target="_blank" rel="noopener">Twitter</a>
-      <a class="btn" href="#" target="_blank" rel="noopener">Telegram</a>
+      <a class="btn" href="https://x.com/HAZARD_Solana" target="_blank" rel="noopener">X</a>
+      <a class="btn" href="https://t.me/hazardcoinofficial" target="_blank" rel="noopener">Telegram</a>
     </div>
   </header>
 
