--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <h1 class="title">HAZARD</h1>
     <p class="slogan">Powered by the Dark Power on Solana 🖤💀</p>
-
+    <p class="slogan">CA: 0000000000000</p>
     <div class="content">
       <p class="lead">HAZARD brings back danger, mystery and adrenaline to crypto.<br>No promises. No safety. Just the game.</p>
       <p class="lead highlight">COMING SOON</p>
