--- a/index.html
+++ b/index.html
@@ -1,61 +1,73 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>HAZARD — Energy Pulse (Coming Soon)</title>
-<link rel="stylesheet" href="styles.css">
+<title>HAZARD — Powered by the Dark Power on Solana</title>
+<meta name="description" content="HAZARD — community-driven dark memecoin on Solana. No promises. No rug. Play responsibly.">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="bg-layer"></div>
+  <!-- page wrapper -->
+  <div id="page">
 
-<header class="wrap">
+    <!-- HERO -->
+    <header class="hero" role="banner">
+      <div class="hero-inner container">
+        <img src="images/skull_a.png" alt="HAZARD Skull" class="hero-skull" />
+        <h1 class="hero-title">HAZARD</h1>
+        <p class="hero-sub">Powered by the Dark Power on Solana 🖤💀</p>
 
-    <div class="skull-wrap">
-        <img src="images/skull_a.png" alt="HAZARD Skull" class="skull" />
-        <div class="skull-glow" aria-hidden="true"></div>
-    </div>
+        <!-- animated contract box -->
+        <div class="contract-wrap">
+          <div class="contract-card" aria-live="polite">
+            <div id="contractText" class="contract-text">DEINE_CONTRACT_ADDRESS_HIER_EINFÜGEN</div>
+            <div class="contract-actions">
+              <button id="copyBtn" class="btn copy">COPY</button>
+            </div>
+          </div>
+        </div>
 
-    <h1 class="title">HAZARD</h1>
-    <p class="slogan">Powered by the Dark Power on Solana 🖤💀</p>
+        <p class="hero-tagline">COMING SOON</p>
+      </div>
+    </header>
 
-    <!-- 🔥 ANIMIERTE CONTRACT BOX -->
-    <div class="ca-container">
-        <div id="ca-text" class="ca-box">0000000000000</div>
-        <button class="ca-copy-btn" onclick="copyCA()">COPY</button>
-    </div>
-
-    <div class="content">
-        <p class="lead bigger">
-            HAZARD ist kein gewöhnlicher Coin.  
-            Es gibt keine Roadmap. Keine Versprechen. Keine Sicherheit.  
-            Nur Risiko, Freiheit und die dunkle Seite von Solana.
+    <!-- MAIN CONTENT -->
+    <main class="container">
+      <section id="about" class="panel">
+        <h2>Was ist HAZARD?</h2>
+        <p class="lead">
+          HAZARD ist kein gewöhnlicher Coin. Er steht für Risiko, Mysterium und rohen Adrenalinschub. 
+          Keine Roadmaps. Keine falschen Versprechen. Keine Sicherheitsschirme. Nur das Spiel — und die, die mutig genug sind, es zu spielen.
         </p>
-
-        <p class="lead bigger">
-            HAZARD ist zu 100% fair und zu 100% Community-geführt.  
-            Jeder entscheidet für sich selbst – wie viel er investiert, wie lange er hält,
-            und wann er aussteigt. Ohne Garantien. Ohne Absicherung. Ohne Ausreden.
+        <p class="lead">
+          HAZARD ist fair: 100% Community. Jeder entscheidet selbst, wie viel er investiert und wann er aussteigt.
+          Keine versteckten Team-Wallets. Keine Market-Maker-Tricks. Keine Garantien.
         </p>
-
-        <p class="lead bigger">
-            Wenn du HAZARD kaufst, akzeptierst du, dass jede Entscheidung deine eigene ist.  
-            Kein Team kontrolliert etwas. Kein Entwickler kann etwas verändern.  
-            Das Spiel gehört dir – und nur dir.
+        <p class="lead">
+          Wenn du HAZARD kaufst, übernimmst du die Verantwortung für jede Entscheidung. Das Projekt ist transparent — aber es gibt keine Rettung. Nur Risiko.
         </p>
+        <p class="community">🖤 <strong>100% community • No rug • No lies</strong></p>
+      </section>
 
-        <p class="lead highlight">COMING SOON</p>
-        <p class="lead">Enter only if you trust your own decisions.</p>
-        <p class="community">🖤 <strong>100% community</strong></p>
-    </div>
+      <section id="links" class="panel">
+        <h2>Follow & Track</h2>
+        <div class="socials">
+          <a class="social" href="https://x.com/HAZARD_Solana" target="_blank" rel="noopener">X</a>
+          <a class="social" href="https://t.me/hazardcoinofficial" target="_blank" rel="noopener">Telegram</a>
+          <a class="social" href="#" target="_blank" rel="noopener">DexScreener</a>
+          <a class="social" href="#" target="_blank" rel="noopener">Solscan</a>
+        </div>
+      </section>
+    </main>
 
-    <div class="cta-row">
-        <a class="btn" href="https://x.com/HAZARD_Solana" target="_blank" rel="noopener">X</a>
-        <a class="btn" href="https://t.me/hazardcoinofficial"
-            target="_blank" rel="noopener">Telegram</a>
-    </div>
-    
-</header>
+    <footer class="site-footer">
+      <div class="container">
+        <small>© 2025 HAZARD — The Dark Power on Solana. Not financial advice.</small>
+      </div>
+    </footer>
+
+  </div>
 
 <script src="script.js"></script>
 </body>
