--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="contract-wrap">
           <div class="contract-card" aria-live="polite">
             <div class="contract-inner">  <!-- <-- FIX: Wrapper hinzugefügt -->
-              <div id="contractText" class="contract-text">DEINE CONTRACT ADDRESS HIER EINFÜGEN</div>  <!-- <-- Leerzeichen -->
+              <div id="contractText" class="contract-text">00000000000000</div>  <!-- <-- Leerzeichen -->
               <div class="contract-actions">
                 <button id="copyBtn" class="btn copy">COPY</button>
               </div>
