--- a/index.html
+++ b/index.html
@@ -19,15 +19,19 @@
         <h1 class="hero-title">HAZARD</h1>
         <p class="hero-sub">Powered by the Dark Power on Solana 🖤💀</p>
 
-        <!-- animated contract box -->
+                    <!-- animated contract box -->
         <div class="contract-wrap">
           <div class="contract-card" aria-live="polite">
-            <div class="contract-inner">  <!-- <-- FIX: Wrapper hinzugefügt -->
-              <div id="contractText" class="contract-text">00000000000000</div>  <!-- <-- Leerzeichen -->
+            <div class="contract-inner">
+              <div id="contractText" class="contract-text">DEINE CONTRACT ADDRESS HIER EINFÜGEN</div>
               <div class="contract-actions">
                 <button id="copyBtn" class="btn copy">COPY</button>
               </div>
             </div>
+          </div>
+        </div>  
+          </div>
+        </div>
           </div>
         </div>
 
